--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "material-table": "^2.0.3",
+    "mui-datatables": "^4.3.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
     "react": "18.2.0",
