--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/styles": "^5.12.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "material-table": "^2.0.3",
     "mui-datatables": "^4.3.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
