--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "next-auth": "^4.21.1",
     "react": "18.2.0",
+    "react-barcode": "^1.4.6",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
